Fix the padding of the buttons and allow them to wrap

--- a/style.css
+++ b/style.css
@@ -77,7 +77,7 @@
     background-color: var(--header);
     padding: 3vh;
     border-radius: 10px;
-    width: 82vw;
+    width: fit-content;
     border: 1vh solid #414a4c;
 }
 
@@ -92,18 +92,22 @@
     align-items: center;
     margin-bottom: 3vh;
     gap: 8vw;
+    flex-wrap: wrap;
+    margin: 10px;
 }
 
 .sign {
     width: 20vw;
     height: 20vh;
-    font-size: 15vh;
+    font-size: 10em;
     border: 1vh solid #414a4c;
     border-radius: 10px;
     display: flex;
     justify-content: center;
     align-items: center;
-    padding: 10vh 10vw;
+    min-width: 30px;
+    padding: 0.8em;
+    flex: 1 1 auto;
 }
 
 /* GAME OVER */
